--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "user-authentication",
+  "name": "user-authentication-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
